Upgrade Java source/target from 8 to 17
- Apply instanceof pattern matching
- Add @Serial annotation to serialVersionUID fields
- Convert String.format to .formatted
- Replace Paths.get with Path.of
- Convert !optional.isPresent to optional.isEmpty

All tests pass with JDK 17.