@@ -363,7 +363,7 @@ public class StringUtils {
         final int minAbbrevWidthOffset = abbrevMarkerLength + abbrevMarkerLength + 1;
 
         if (maxWidth < minAbbrevWidth) {
-            throw new IllegalArgumentException(String.format("Minimum abbreviation width is %d", minAbbrevWidth));
+            throw new IllegalArgumentException("Minimum abbreviation width is %d".formatted(minAbbrevWidth));
         }
         final int strLen = str.length();
         if (strLen <= maxWidth) {
@@ -376,7 +376,7 @@ public class StringUtils {
             return str.substring(0, maxWidth - abbrevMarkerLength) + abbrevMarker;
         }
         if (maxWidth < minAbbrevWidthOffset) {
-            throw new IllegalArgumentException(String.format("Minimum abbreviation width with offset is %d", minAbbrevWidthOffset));
+            throw new IllegalArgumentException("Minimum abbreviation width with offset is %d".formatted(minAbbrevWidthOffset));
         }
         return abbrevMarker + abbreviate(str.substring(offset), abbrevMarker, maxWidth - abbrevMarkerLength);
     }
