@@ -125,7 +125,7 @@ class EqualsBuilderReflectJreImplementationTest extends AbstractBuilderTest {
 
         @Override
         public String toString() {
-            return String.format("%s[%s, %s, %s, %s, %s]", getClass().getSimpleName(), charSequence, temporal, temporalAccessor, temporalAmount,
+            return "%s[%s, %s, %s, %s, %s]".formatted(getClass().getSimpleName(), charSequence, temporal, temporalAccessor, temporalAmount,
                     Arrays.toString(objects));
         }
     }
@@ -168,7 +168,7 @@ class EqualsBuilderReflectJreImplementationTest extends AbstractBuilderTest {
 
         @Override
         public String toString() {
-            return String.format("%s[%s, %s, %s, %s]", getClass().getSimpleName(), string, instant, duration, period);
+            return "%s[%s, %s, %s, %s]".formatted(getClass().getSimpleName(), string, instant, duration, period);
         }
 
         @Override
@@ -211,7 +211,7 @@ class EqualsBuilderReflectJreImplementationTest extends AbstractBuilderTest {
 
         @Override
         public String toString() {
-            return String.format("%s[%s, %s, %s, %s]", getClass().getSimpleName(), string, instant, duration, period);
+            return "%s[%s, %s, %s, %s]".formatted(getClass().getSimpleName(), string, instant, duration, period);
         }
 
     }
@@ -254,7 +254,7 @@ class EqualsBuilderReflectJreImplementationTest extends AbstractBuilderTest {
 
         @Override
         public String toString() {
-            return String.format("%s[%s - %s - %s - %s]", getClass().getSimpleName(), string, instant, duration, period);
+            return "%s[%s - %s - %s - %s]".formatted(getClass().getSimpleName(), string, instant, duration, period);
         }
 
     }
