@@ -1352,7 +1352,7 @@ class DateUtilsTest extends AbstractLangTest {
     @DefaultTimeZone(TimeZones.GMT_ID)
     void testToLocalDateTime(final LocalDateTime expected, final Date date, final TimeZone timeZone) {
         assertEquals(LocalDateTime.ofInstant(date.toInstant(), ZoneId.systemDefault()), DateUtils.toLocalDateTime(date),
-                () -> String.format("expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s", expected, date, timeZone, TimeZone.getDefault()));
+                () -> "expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s".formatted(expected, date, timeZone, TimeZone.getDefault()));
     }
 
     @ParameterizedTest
@@ -1361,7 +1361,7 @@ class DateUtilsTest extends AbstractLangTest {
     @DefaultTimeZone(TimeZones.GMT_ID)
     void testToLocalDateTimeTimeZone(final LocalDateTime expected, final Date date, final TimeZone timeZone) {
         assertEquals(expected, DateUtils.toLocalDateTime(date, timeZone),
-                () -> String.format("expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s", expected, date, timeZone, TimeZone.getDefault()));
+                () -> "expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s".formatted(expected, date, timeZone, TimeZone.getDefault()));
     }
 
     @ParameterizedTest
@@ -1371,7 +1371,7 @@ class DateUtilsTest extends AbstractLangTest {
     void testToOffsetDateTime(final LocalDateTime expected, final Date date, final TimeZone timeZone) {
         final OffsetDateTime offsetDateTime = DateUtils.toOffsetDateTime(date);
         assertEquals(OffsetDateTime.ofInstant(date.toInstant(), ZoneId.systemDefault()), offsetDateTime,
-                () -> String.format("expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s", expected, date, timeZone, TimeZone.getDefault()));
+                () -> "expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s".formatted(expected, date, timeZone, TimeZone.getDefault()));
     }
 
     @ParameterizedTest
@@ -1380,7 +1380,7 @@ class DateUtilsTest extends AbstractLangTest {
     @DefaultTimeZone(TimeZones.GMT_ID)
     void testToOffsetDateTimeTimeZone(final LocalDateTime expected, final Date date, final TimeZone timeZone) {
         assertEquals(expected, DateUtils.toOffsetDateTime(date, timeZone).toLocalDateTime(),
-                () -> String.format("expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s", expected, date, timeZone, TimeZone.getDefault()));
+                () -> "expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s".formatted(expected, date, timeZone, TimeZone.getDefault()));
     }
 
     @ParameterizedTest
@@ -1390,10 +1390,10 @@ class DateUtilsTest extends AbstractLangTest {
     void testToZonedDateTime(final LocalDateTime expected, final Date date, final TimeZone timeZone) {
         final ZonedDateTime zonedDateTime = DateUtils.toZonedDateTime(date);
         assertEquals(ZonedDateTime.ofInstant(date.toInstant(), ZoneId.systemDefault()), zonedDateTime,
-                () -> String.format("expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s", expected, date, timeZone, TimeZone.getDefault()));
+                () -> "expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s".formatted(expected, date, timeZone, TimeZone.getDefault()));
         // Using atZone()
         assertEquals(date.toInstant().atZone(ZoneId.systemDefault()), zonedDateTime,
-                () -> String.format("expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s", expected, date, timeZone, TimeZone.getDefault()));
+                () -> "expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s".formatted(expected, date, timeZone, TimeZone.getDefault()));
     }
 
     @ParameterizedTest
@@ -1403,10 +1403,10 @@ class DateUtilsTest extends AbstractLangTest {
     void testToZonedDateTimeTimeZone(final LocalDateTime expected, final Date date, final TimeZone timeZone) {
         final ZonedDateTime zonedDateTime = DateUtils.toZonedDateTime(date, timeZone);
         assertEquals(expected, zonedDateTime.toOffsetDateTime().toLocalDateTime(),
-                () -> String.format("expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s", expected, date, timeZone, TimeZone.getDefault()));
+                () -> "expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s".formatted(expected, date, timeZone, TimeZone.getDefault()));
         // Using atZone()
         assertEquals(date.toInstant().atZone(TimeZones.toTimeZone(timeZone).toZoneId()), zonedDateTime,
-                () -> String.format("expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s", expected, date, timeZone, TimeZone.getDefault()));
+                () -> "expected = %s, date = %s, timeZone = %s, TimeZone.getDefault() = %s".formatted(expected, date, timeZone, TimeZone.getDefault()));
     }
 
     /**
